# threebodies

./: .gitignore  404.html  CNAME  README.md  _config.yml
.github/workflows/: codeql-analysis.yml
_drafts/: 2019-11-28-esp-idf-3.markdown  d1.xxx  w.markdown
_includes/: _layout.html  index.html  post.html
_includes/_macro/: post-collapse.html
_includes/_scripts/: commons.html
_layouts/: main.html
_posts/: 2019-10-28-esp-idf-1.markdown  2019-10-28-hackmanchester.markdown  2019-10-28-platformio-hw-test.markdown  2019-10-28-welcome-to-jekyll.markdown  2019-11-06-esp-idf-2.markdown  2019-11-25-esp-idf-3.markdown  2019-11-28-esp-idf-3.markdown  2019-11-30-esp-idf-4.markdown  2019-12-01-esp-idf-4.markdown  2019-12-15-xmas-project.markdown  2019-12-26-xmas-project.markdown  2020-02-29-whyfp-1.markdown  2020-03-13-pm.markdown  2020-03-16-pm.markdown  2020-03-31-cnc.markdown  2020-10-28-docs.markdown  2020-10-28-interns1.markdown  2020-10-28-intro.markdown  2020-11-01-interns.markdown  2020-11-03-scalatraining1.markdown  2020-11-10-scalatraining2.markdown  2020-11-20-scalatraining2.markdown  2020-11-24-scalatraining2.markdown  2021-01-25-gops.markdown  2021-01-27-gops.markdown
_sass/_custom/: custom.scss
_sass/_variables/: base.scss
assets/2019-11-06-esp-idf-2/: button.sch  plain-button-sch.acorn  slow-1c-detail.graffle  slow.acorn
assets/2019-11-30-esp-idf-3/: 01.acorn  none.acorn  red.acorn
assets/2019-12-01-esp-idf-4/: rmt_conv.graffle
source/2020-12-xx-httpclientperf/cpp/: CMakeLists.txt  certificates.hpp  main.cpp  session.h
(+33 files in other folders)
